# Flategy

./: .gitignore  Cargo.toml  Dev.ipynb  Dev2.ipynb  DevContinuous.ipynb  Dockerfile  README.md  requirements.txt  run  setup.cfg
flategy/: __init__.py
flategy/test/: test_doc.py
scripts/: build_image  build_lib  notebook  run.py
src/: core.rs  flategy.cpp  flategy.hpp  flategy_data.fbs  lib.rs  libflategy.cpp  map.rs  mapgen.rs  python_bindings.cpp  render.rs  server.rs  util.rs
src/test/: main.cpp  test_flategy.cpp
static/: example.html
tools/: app.dockerfile  notebook.dockerfile  notebook.sh  run  run.sh
