[package]
name = "libflategy"
version = "0.1.0"
authors = ["douglas"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
rand = "0.7.3"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "serve"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4.4"
